testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/no_rules_object.lkql
val invalid_operation = 40 + 42
